Fix interprocess updates of the configuration and a shortcut scheme

This patch does two things:
1) Removes handwriten saving of the shortcuts into the kritarc. Now the
   shortcuts are saved into XML gui tree as it is supposed to.
2) Added synchronization between different instances of Krita using
   QFileSystemNotifier on kritarc file.

BUG:313218