krita/ui/kis_view2.h
@@ -204,6 +204,7 @@ signals:
 
 private slots:
 
+    void slotConfigChanged();
     void slotPreferences();
     void slotBlacklistCleanup();
     void slotImageSizeChanged(const QPointF &oldStillPoint, const QPointF &newStillPoint);
