libs/main/KoMainWindow.cpp
@@ -1541,6 +1541,8 @@ void KoMainWindow::slotConfigureKeys()
         undoAction->setText(oldUndoText);
         redoAction->setText(oldRedoText);
     }
+
+    emit keyBindingsChanged();
 }
 
 void KoMainWindow::slotConfigureToolbars()
