libs/main/KoMainWindow.h
@@ -192,6 +192,8 @@ signals:
     /// and the document anymore.
     void loadCompleted();
 
+    void keyBindingsChanged();
+
 public slots:
 
     /**
